[package]
name = "regression-wasm"
version = "0.1.0"
authors = ["Ryan Drew <ryan.drew14@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/ryandrew14/regression-wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"